# observableprops

./: .gitignore  README.md  pyproject.toml  setup.py
observableprops/: __init__.py
tests/: test.py
