[tool.poetry]
name = "observableprops"
version = "0.2.0"
description = "Utility for creating properties and adding observers to them."
authors = ["ramazanemreosmanoglu <ramazanemre@protonmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/ramazanemreosmanoglu/observableprops"
classifiers = [
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
